import "steammessages.proto";

option optimize_for = SPEED;
option cc_generic_services = false;

message CGCStorePurchaseInit_LineItem {
	optional uint32 item_def_id = 1;
	optional uint32 quantity = 2;
	optional uint32 cost_in_local_currency = 3;
}

message CMsgGCStorePurchaseInit {
	optional string country = 1;
	optional int32 language = 2;
	optional int32 currency = 3;
	repeated .CGCStorePurchaseInit_LineItem line_items = 4;
}

message CMsgGCStorePurchaseInitResponse {
	optional int32 result = 1;
	optional uint64 txn_id = 2;
}

message CSOPartyInvite {
	optional uint64 group_id = 1 [(key_field) = true];
	optional fixed64 sender_id = 2;
	optional string sender_name = 3;
}

message CSOLobbyInvite {
	optional uint64 group_id = 1 [(key_field) = true];
	optional fixed64 sender_id = 2;
	optional string sender_name = 3;
}

message CMsgSystemBroadcast {
	optional string message = 1;
}

message CMsgInviteToParty {
	optional fixed64 steam_id = 1;
}

message CMsgInvitationCreated {
	optional uint64 group_id = 1;
	optional fixed64 steam_id = 2;
}

message CMsgPartyInviteResponse {
	optional uint64 party_id = 1;
	optional bool accept = 2;
}

message CMsgKickFromParty {
	optional fixed64 steam_id = 1;
}

message CMsgLeaveParty {
}

message CMsgGameServerInfo {
	enum ServerType {
		UNSPECIFIED = 0;
		GAME = 1;
		PROXY = 2;
		CONTROLLER = 3;
	}

	optional fixed32 server_public_ip_addr = 1;
	optional fixed32 server_private_ip_addr = 2;
	optional uint32 server_port = 3;
	optional uint32 server_tv_port = 4;
	optional string server_key = 5;
	optional bool server_hibernation = 6;
	optional .CMsgGameServerInfo.ServerType server_type = 7 [default = UNSPECIFIED];
	optional uint32 server_region = 8;
}

message CMsgServerAvailable {
}

message CSOEconGameAccountClient {
	optional uint32 additional_backpack_slots = 1 [default = 0];
	optional bool trial_account = 2 [default = false];
	optional bool eligible_for_online_play = 3 [default = true];
	optional bool need_to_choose_most_helpful_friend = 4;
	optional bool in_coaches_list = 5;
	optional fixed32 trade_ban_expiration = 6;
	optional fixed32 duel_ban_expiration = 7;
	optional uint32 preview_item_def = 8 [default = 0];
}

message CSOItemCriteriaCondition {
	optional int32 op = 1;
	optional string field = 2;
	optional bool required = 3;
	optional float float_value = 4;
	optional string string_value = 5;
}

message CSOItemCriteria {
	optional uint32 item_level = 1;
	optional int32 item_quality = 2;
	optional bool item_level_set = 3;
	optional bool item_quality_set = 4;
	optional uint32 initial_inventory = 5;
	optional uint32 initial_quantity = 6;
	optional bool forced_quality_match = 7;
	optional bool ignore_enabled_flag = 8;
	repeated .CSOItemCriteriaCondition conditions = 9;
}

message CSOItemRecipe {
	optional uint32 def_index = 1;
	optional string name = 2;
	optional string n_a = 3;
	optional string desc_inputs = 4;
	optional string desc_outputs = 5;
	optional string di_a = 6;
	optional string di_b = 7;
	optional string di_c = 8;
	optional string do_a = 9;
	optional string do_b = 10;
	optional string do_c = 11;
	optional bool requires_all_same_class = 12;
	optional bool requires_all_same_slot = 13;
	optional int32 class_usage_for_output = 14;
	optional int32 slot_usage_for_output = 15;
	optional int32 set_for_output = 16;
	repeated .CSOItemCriteria input_items_criteria = 20;
	repeated .CSOItemCriteria output_items_criteria = 21;
	repeated uint32 input_item_dupe_counts = 22;
}

message CMsgDevNewItemRequest {
	optional fixed64 receiver = 1;
	optional .CSOItemCriteria criteria = 2;
}

message CMsgDevDebugRollLootRequest {
	optional fixed64 receiver = 1;
	optional string loot_list_name = 2;
}

message CMsgIncrementKillCountAttribute {
	optional uint64 killer_steam_id = 1;
	optional uint64 victim_steam_id = 2;
	optional uint64 item_id = 3;
	optional uint32 event_type = 4;
}

message CSOEconItemAttribute {
	optional uint32 def_index = 1;
	optional uint32 value = 2;
}

message CSOEconItemEquipped {
	optional uint32 new_class = 1;
	optional uint32 new_slot = 2;
}

message CSOEconItem {
	optional uint64 id = 1;
	optional uint32 account_id = 2;
	optional uint32 inventory = 3;
	optional uint32 def_index = 4;
	optional uint32 quantity = 5;
	optional uint32 level = 6;
	optional uint32 quality = 7;
	optional uint32 flags = 8 [default = 0];
	optional uint32 origin = 9;
	optional string custom_name = 10;
	optional string custom_desc = 11;
	repeated .CSOEconItemAttribute attribute = 12;
	optional .CSOEconItem interior_item = 13;
	optional bool in_use = 14 [default = false];
	optional uint32 style = 15 [default = 0];
	optional uint64 original_id = 16 [default = 0];
	optional bool contains_equipped_state = 17;
	repeated .CSOEconItemEquipped equipped_state = 18;
}

message CMsgAdjustItemEquippedState {
	optional uint64 item_id = 1;
	optional uint32 new_class = 2;
	optional uint32 new_slot = 3;
}

message CMsgSortItems {
	optional uint32 sort_type = 1;
}

message CSOEconClaimCode {
	optional uint32 account_id = 1;
	optional uint32 code_type = 2;
	optional uint32 time_acquired = 3;
	optional string code = 4;
}

message CMsgStoreGetUserData {
	optional fixed32 price_sheet_version = 1;
}

message CMsgStoreGetUserDataResponse {
	optional int32 result = 1;
	optional int32 currency = 2;
	optional string country = 3;
	optional fixed32 price_sheet_version = 4;
	optional uint64 experiment_data = 5 [default = 0];
	optional int32 featured_item_idx = 6;
	optional bool show_hat_descriptions = 7 [default = true];
	optional bytes price_sheet = 8;
	optional int32 default_item_sort = 9 [default = 0];
	repeated uint32 popular_items = 10;
}

message CMsgUpdateItemSchema {
	optional bytes items_game = 1;
	optional fixed32 item_schema_version = 2;
	optional string items_game_url = 3;
}

message CMsgRequestItemSchemaData {
}

message CMsgGCError {
	optional string error_text = 1;
}

message CMsgRequestInventoryRefresh {
}

message CMsgConVarValue {
	optional string name = 1;
	optional string value = 2;
}

message CMsgReplicateConVars {
	repeated .CMsgConVarValue convars = 1;
}

message CMsgUseItem {
	optional uint64 item_id = 1;
	optional fixed64 target_steam_id = 2;
	repeated uint32 gift__potential_targets = 3;
	optional uint32 duel__class_lock = 4;
}

message CMsgReplayUploadedToYouTube {
	optional string youtube_url = 1;
	optional string youtube_account_name = 2;
	optional uint64 session_id = 3;
}

message CMsgItemAcknowledged {
	optional uint32 account_id = 1;
	optional uint32 inventory = 2;
	optional uint32 def_index = 3;
	optional uint32 quality = 4;
}

message CMsgSetPresetItemPosition {
	optional uint32 class_id = 1;
	optional uint32 preset_id = 2;
	optional uint32 slot_id = 3;
	optional uint64 item_id = 4;
}

message CSOEconItemPresetInstance {
	optional uint32 class_id = 2 [(key_field) = true];
	optional uint32 preset_id = 3 [(key_field) = true];
	optional uint32 slot_id = 4 [(key_field) = true];
	optional uint64 item_id = 5;
}

message CMsgSelectItemPresetForClass {
	optional uint32 class_id = 1;
	optional uint32 preset_id = 2;
}

message CMsgSelectItemPresetForClassReply {
	optional bool success = 1;
}

message CSOSelectedItemPreset {
	optional uint32 account_id = 1 [(key_field) = true];
	optional uint32 class_id = 2 [(key_field) = true];
	optional uint32 preset_id = 3;
}

message CMsgGCReportAbuse {
	optional fixed64 target_steam_id = 1;
	optional string description = 4;
	optional uint64 gid = 5;
	optional uint32 abuse_type = 2;
	optional uint32 content_type = 3;
	optional fixed32 target_game_server_ip = 6;
	optional uint32 target_game_server_port = 7;
}

message CMsgGCReportAbuseResponse {
	optional fixed64 target_steam_id = 1;
	optional uint32 result = 2;
	optional string error_message = 3;
}

message CMsgGCNameItemNotification {
	optional fixed64 player_steamid = 1;
	optional uint32 item_def_index = 2;
	optional string item_name_custom = 3;
}

message CMsgGCClientDisplayNotification {
	optional string notification_title_localization_key = 1;
	optional string notification_body_localization_key = 2;
	repeated string body_substring_keys = 3;
	repeated string body_substring_values = 4;
}

message CMsgUpdatePeriodicEvent {
	optional uint32 account_id = 1;
	optional uint32 event_type = 2;
	optional uint32 amount = 3;
}

message CSOItemCommunityMap {
	optional uint32 mapID = 1;
	optional uint32 mapAuthorID = 2;
	optional string mapName = 3;
	optional string mapFilename = 4;
	optional fixed64 mapUGCHandle = 5;
	optional fixed64 mapUGCThumbHandle = 6;
	optional uint32 mapVersion = 7;
	optional fixed32 mapCreateDate = 8;
	optional uint32 mapVoteUp = 9;
	optional uint32 mapVoteDown = 10;
	optional uint32 mapDownloads = 11;
	optional uint32 userVoteStatus = 12;
	optional bool userCompleted = 13;
	optional fixed32 userDownloadTimestamp = 14;
}

message CMsgPlaytestReportDemo {
	optional fixed64 author_id = 1;
	optional fixed64 ugc_handle = 2;
	optional fixed64 map_id = 3;
	optional fixed64 player_id = 4;
	optional fixed64 map_file_id = 5;
}

message CMsgPlaytestRetrieveDemoHandles {
	optional fixed64 author_id = 1;
}

message CMsgPlaytestRetrieveDemoHandlesResponse {
	optional fixed64 author_id = 1;
	repeated fixed64 ugc_handle = 2;
	repeated fixed64 map_id = 3;
	repeated fixed64 player_id = 4;
	repeated bool personal_cloud = 5;
	repeated bool new_demo = 6;
	repeated fixed64 map_file_id = 7;
}

message CMsgPlaytestRemoveDemo {
	optional fixed64 ugc_handle = 2;
}

message CMsgPlaytestMarkDemoForDelete {
	optional fixed64 ugc_handle = 1;
	optional fixed64 cloud_owner_id = 2;
}

message CMsgPlaytestMarkDemoNotNew {
	optional fixed64 ugc_handle = 1;
}

message CMsgPlaytestRetrieveNewDemoCountResponse {
	repeated fixed64 map_id = 1;
	repeated uint32 count = 2;
}

message CMsgPlaytestRetrieveDemoPlayersForMap {
	optional fixed64 map_id = 1;
}

message CMsgPlaytestRetrieveDemoPlayersForMapResponse {
	repeated fixed64 player_id = 1;
	repeated uint32 new_count = 2;
}

message CMsgCommunityMapAddQueueHistoryEntry {
	optional uint32 total_count = 1;
	repeated fixed64 map_id = 2;
	repeated fixed32 played_time = 3;
	repeated fixed32 completion_time = 4;
}

message CMsgPlaytestTestMessage {
	optional fixed64 test_number = 1;
	optional fixed64 test_number_two = 2;
	optional fixed64 test_number_three = 3;
}

message CMsgPlaytestReportDemoSession {
	optional fixed64 author_id = 1;
	optional fixed64 map_id = 2;
	optional fixed64 map_file_id = 3;
	repeated fixed64 ugc_handle = 4;
	repeated uint32 num_in_session = 5;
}

message CMsgCommunityMapItemVoteSummary {
	optional uint32 total_count = 1;
	repeated fixed64 map_id = 2;
}

message CMsgCommunityMapItemVoteSummaryResponse {
	optional uint32 total_count = 1;
	repeated fixed64 map_id = 2;
	repeated float score = 3;
	repeated uint32 up_votes = 4;
	repeated uint32 down_votes = 5;
}

